err/pyblewrapper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyBLEWrapper-0.2.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyble'...
Compiling './lib/python3.5/site-packages/pyble/_roles.py'...
***   File "./lib/python3.5/site-packages/pyble/_roles.py", line 122
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyble/backend.py'...
***   File "./lib/python3.5/site-packages/pyble/backend.py", line 92
    print service
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyble/const'...
Listing './lib/python3.5/site-packages/pyble/const/characteristic'...
Listing './lib/python3.5/site-packages/pyble/const/characteristic/gap'...
Listing './lib/python3.5/site-packages/pyble/const/characteristic/gatt'...
Listing './lib/python3.5/site-packages/pyble/const/descriptor'...
Listing './lib/python3.5/site-packages/pyble/const/descriptor/gatt'...
Listing './lib/python3.5/site-packages/pyble/const/profile'...
Listing './lib/python3.5/site-packages/pyble/const/service'...
Compiling './lib/python3.5/site-packages/pyble/handlers.py'...
***   File "./lib/python3.5/site-packages/pyble/handlers.py", line 117
    print "An UUID is needed for a ProfileHandler"
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyble/linux'...
Listing './lib/python3.5/site-packages/pyble/osx'...
Compiling './lib/python3.5/site-packages/pyble/osx/backend.py'...
***   File "./lib/python3.5/site-packages/pyble/osx/backend.py", line 91
    print service
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyble/osx/centralManager.py'...
***   File "./lib/python3.5/site-packages/pyble/osx/centralManager.py", line 89
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyble/osx/console.py'...
***   File "./lib/python3.5/site-packages/pyble/osx/console.py", line 82
    print traceback.format_exc()
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyble/osx/gatt.py'...
***   File "./lib/python3.5/site-packages/pyble/osx/gatt.py", line 140
    print "%s:%s:%s properties" % (self.service.peripheral, self.service, self)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyble/osx/peripheral.py'...
***   File "./lib/python3.5/site-packages/pyble/osx/peripheral.py", line 130
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyble/patterns.py'...
***   File "./lib/python3.5/site-packages/pyble/patterns.py", line 23
    print self.func.__name__, "is deprecated"
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyble/profile'...
Listing './lib/python3.5/site-packages/pyble/windows8'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
